# streaming-laptop-price-mlops

./: README.md  databricks.yaml  main.py  pyproject.toml
notebooks/: data_cleaning.py  laptop_clean_dataset.csv
streaming_laptop_price_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
